# warpline

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  README.md  loomweave.yaml  pyproject.toml
.claude/: settings.json
.github/workflows/: deploy-site.yml
contracts/: reverify_worklist.v1.schema.json
docs/: federation.md
docs/arch-analysis-2026-06-28-0728/: 07-improvement-roadmap.md
docs/arch-analysis-2026-06-28-0728/temp/: debt-catalog.md  validation-catalog.md  validation-final.md
docs/concepts/: blast-radius.md
docs/evidence/: 2026-06-13-dogfood-readiness.md  member-dirty-baseline.txt
docs/federation/: contracts.md
docs/integration/: 2026-06-16-temporal-correlation-spine-pmo-proposal.md  2026-06-22-warpline-5th-producer-handover.md  2026-07-01-warpline-5th-producer-handover.md
docs/plans/: 2026-06-13-heddle-1-0-readiness.md  2026-06-13-heddle-implementation-goal-prompt.md  2026-06-16-rung-0-1-2-implementation-plan.md
docs/product/: agentic-mcp-product-design.md  current-state.md  metrics.md  roadmap.md  vision.md
docs/product/decisions/: 0001-product-candidate-ownership.md  0002-capability-ladder-roadmap.md  0003-hub-ruling-pdr-0025-relay.md  0008-accept-plainweave-requirements-consumer.md  0011-discharge-5th-producer-conformance-obligation.md
docs/product/prds/: PRD-0001-agent-first-mcp-productization.md
docs/reference/: cli.md
scripts/: check_release_candidate.sh  run_spike.sh
site/: .gitignore  astro.config.mjs  package-lock.json  package.json
site/public/: CNAME
site/scripts/: fetch-site-kit.mjs  sync-assets.mjs
solution-architecture/: 00-scope-and-context.md  01-requirements.md  02-nfr-specification.md  03-nfr-mapping.md  04-solution-overview.md  05-tech-selection-rationale.md  06-descoped-and-deferred.md  07-c4-context.md  08-c4-containers.md  09-component-specifications.md  10-data-model.md  11-interface-contracts.md  13-deployment-view.md  14-requirements-traceability-matrix.md  15-integration-plan.md  17-risk-register.md
solution-architecture/adrs/: 0001-spike-first-posture.md  0002-read-side-hook-fed-ingestion.md  0003-sei-primary-locator-first-class.md  0004-aggregator-firewall.md
spike/: REPORT.md  SPIKE-BRIEF.md  measurements.json
src/heddle/: cli.py  commands.py  dogfood.py  envelope.py  errors.py  git.py  install_support.py  loomweave.py  mcp.py  productization.py  propagation.py  refs.py  reverify.py  siblings.py  snapshot.py  store.py
src/warpline/: __init__.py  _blast.py  _enrichment.py  cli.py  commands.py  cop.py  coupling.py  envelope.py  federation.py  git.py  listing.py  mcp.py  reresolve.py  reverify.py  siblings.py  snapshot.py  store.py
tests/: conftest.py  test_anchor_capture.py  test_blast_helpers.py  test_commands.py  test_cop.py  test_coupling.py  test_dogfood.py  test_enrichment_helpers.py  test_enrichment_merge.py  test_envelope_reasons.py  test_federation_consult.py  test_git_backfill.py  test_honesty_invariant.py  test_legis_governance_client.py  test_list_ergonomics.py  test_loomweave_probe.py  test_loomweave_snapshot_adapter.py  test_mcp.py  test_package.py  test_product_workspace.py  test_productization_gate.py  test_propagation.py  test_release_candidate_gate.py  test_requirements_traceability.py  test_reresolve.py  test_reverify.py  test_reverify_verification.py  test_sei_resolution.py  test_siblings_http.py  test_snapshots.py  test_store.py  test_store_migrations.py  test_verification_store.py
tests/contracts/: test_golden_vectors.py  test_governance_read_schema.py  test_heddle_contract_fixtures.py  test_reverify_worklist_schema.py  test_warpline_contract_fixtures.py
tests/install/: test_install_doctor.py
tests/integration/: test_filigree_live.py  test_hx1_live.py  test_loomweave_live.py  test_reconstruction_demo.py
tests/spike/: test_harness.py
(+18 files in other folders)
