[project]
name = "heddle"
version = "1.0.0"
description = "Local-first temporal change-impact product for Weft federation workflows."
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "John Morrissey", email = "john@foundryside.dev"},
]
readme = "README.md"
keywords = ["change-impact", "temporal", "mcp", "agent", "sqlite", "cli", "weft"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Version Control :: Git",
    "Operating System :: POSIX",
    "Typing :: Typed",
]
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "ruff>=0.14.8",
]

[project.scripts]
heddle = "heddle.cli:main"
heddle-mcp = "heddle.mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/heddle"]
# Ship the injectable skill payload (non-.py) so `heddle install` works from a
# built wheel, not only from source.
artifacts = ["src/heddle/skills/**"]

[tool.hatch.build.targets.sdist]
artifacts = ["src/heddle/skills/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["heddle"]
