[project]
name = "warpline"
version = "1.0.0"
description = "Local-first temporal change-impact product for Weft federation workflows."
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "John Morrissey", email = "john@foundryside.dev"},
]
readme = "README.md"
keywords = ["change-impact", "temporal", "mcp", "agent", "sqlite", "cli", "weft"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Version Control :: Git",
    "Operating System :: POSIX",
    "Typing :: Typed",
]
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "ruff>=0.14.8",
]

[project.scripts]
warpline = "warpline.cli:main"
warpline-mcp = "warpline.mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/warpline"]
# Ship the injectable skill payload (non-.py) so `warpline install` works from a
# built wheel, not only from source.
artifacts = ["src/warpline/skills/**"]

[tool.hatch.build.targets.sdist]
# Scope the sdist to the package + metadata. Without an exclusive allow-list,
# hatchling vacuums the whole working tree (only honoring the root .gitignore)
# and auto-harvests LICENSE/README files out of site/node_modules — a 38 MB
# sdist. `only-include` (not `include`, which is additive) restricts it.
only-include = [
    "src/warpline",
    "tests",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "pyproject.toml",
]
artifacts = ["src/warpline/skills/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["warpline"]
